--- a/Oblig1/manual_classification.ipynb
+++ b/Oblig1/manual_classification.ipynb
@@ -161,7 +161,7 @@
    "id": "7c1c7432",
    "metadata": {},
    "source": [
-    "Som vi ser av disse utregningen så får vi samme IG ved begge av disse grenseverdiene og vi kan derfor bare velge en av disse da det ikke utgjøre noe forskjellig om hvilken av disse som brukes. Jeg velger derfor å splitte på 5,3 i dette tilfellet. Da får vi følgende tree etter denne delingen (se figur_1 i vedlegg ... ). "
+    "Som vi ser av disse utregningen så får vi samme IG ved begge av disse grenseverdiene og vi kan derfor bare velge en av disse da det ikke utgjøre noe forskjellig om hvilken av disse som brukes. Jeg velger derfor å splitte på 5,3 i dette tilfellet. Da får vi følgende tree etter denne delingen (se figur i vedlegg tre1.jpg). "
    ]
   },
   {
@@ -186,7 +186,7 @@
    "id": "e127a0a2",
    "metadata": {},
    "source": [
-    "Siden vi kun har to gjennstående iriser å dele opp i, og denne spliten gir oss en ren fordeling i begge de to nye bladnoedene er det ingen behov for å gjøre videre utregninger å vi får dermed alle forekomster av \"Iris-setosa\" i den nye ventre bladnoden og alle forekomster av \"Iris-versicolor\" i den nye høre bladnoden vi vil dermed få følgende tre etter denne oppdelingen (se figur_2 i vedlegg .....). "
+    "Siden vi kun har to gjennstående iriser å dele opp i, og denne spliten gir oss en ren fordeling i begge de to nye bladnoedene er det ingen behov for å gjøre videre utregninger å vi får dermed alle forekomster av \"Iris-setosa\" i den nye ventre bladnoden og alle forekomster av \"Iris-versicolor\" i den nye høre bladnoden vi vil dermed få følgende tre etter denne oppdelingen (se figur i vedlegg tre2.jpg). "
    ]
   },
   {
