--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "fbd3f84e",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "73dedc1a",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b55411b9",
    "metadata": {},
    "outputs": [
@@ -800,7 +800,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "da9e5e94",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "15413364",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "5e9b156d",
    "metadata": {},
    "outputs": [
@@ -1319,11 +1319,11 @@
       "ROCAUC: 0.96 +- 0.01\n",
       "************************\n",
       "Validation results:\n",
-      "Accuracy: 0.94 +- 0.02\n",
+      "Accuracy: 0.93 +- 0.02\n",
       "Precision: 0.93 +- 0.04\n",
       "Recall: 0.90 +- 0.05\n",
       "F1: 0.91 +- 0.03\n",
-      "ROCAUC: 0.93 +- 0.03\n"
+      "ROCAUC: 0.93 +- 0.02\n"
      ]
     }
    ],
@@ -1585,11 +1585,11 @@
    "id": "c4da0703",
    "metadata": {},
    "source": [
-    "Etter å ha gjennomført testing og validering med forskjellige verdier for parameterene jeg har valgt å bruke kom jeg fram til at versjonen \"dt10\" ga meg best resultater sammenlignet med baseline og det er dermed denne jeg kommer til å sammeligne opp mot GaussianNB for naive bayes modellen. dt10 hadde følge verdier for parameterene DecisionTreeClassifier(max_depth=3, min_samples_leaf=5, min_samples_split=8).\n",
+    "Etter å ha gjennomført testing og validering med forskjellige verdier for parameterene kom jeg fram til at versjonen \"dt10\" ga meg best resultater sammenlignet med baseline og det er dermed denne jeg kommer til å sammeligne opp mot GaussianNB for naive bayes modellen. dt10 hadde følge verdier for parameterene DecisionTreeClassifier(max_depth=3, min_samples_leaf=5, min_samples_split=8).\n",
     "\n",
-    "Når vi sammenligner resultatene (se kopi av verdiene under), så ser vi at resultatene traning delen av datasetet har blitt dårligere fra dt1 til dt10, mens validerings delen har blitt noe forbedre. Samtidig har standard aviket økt for trenings delen og blitt minimalt mindre for validerings delen av datasete. Dette tyder i utgangspunktet på at modellen i mindre grad overfiter og har fått potensiell bedre generell overføringverdi til andre dataset. Det er imidlertid viktig å påpeke at det er en del variasjon i den randomiserte fordeling av datasete og du vil få forskjellige resultater ved repetive kjøringer av modellen, men helheten av resultatene tyder på at modellen har blitt bedre med tuningen fra dt1 til dt10.\n",
+    "Når vi sammenligner resultatene (se kopi av verdiene under), så ser vi at resultatene fra traning delen av datasetet har blitt dårligere fra dt1 til dt10, mens validerings delen har blitt noe forbedre. Samtidig har standard aviket økt for trenings delen og blitt minimalt mindre for validerings delen av datasete. Dette tyder i utgangspunktet på at modellen i mindre grad overfiter og potensielt har fått bedre generell overføringverdi. Det er imidlertid viktig å påpeke at det er en del variasjon i den randomiserte oppdelingen av datasete og du vil få forskjellige resultater ved repetive kjøringer av modellen, men helheten av resultatene tyder på at modellen har blitt bedre med tuningen fra dt1 til dt10.\n",
     "\n",
-    "Når vi sammenligner de individuelle verdiene så ser vi at alle målene har blitt forbedret for validerings delen fra dt1 til dt10 bortsett fra for recall hvor det var en liten nedgang fra 0.91 til 0.90. Dette betyr i utgangspunktet at modellen har blitt bedre i mere presis i sine prediksjon, men litt dårligere til finne flest mulig ekte \"postive\" utfall. I denne tilfellet vil jeg alikvel si at den tunede modellen er totaltsett bedre.\n",
+    "Når vi sammenligner de individuelle verdiene så ser vi at alle målene har blitt forbedret for validerings delen fra dt1 til dt10 bortsett fra for recall hvor det var en liten nedgang fra 0.91 til 0.90. Dette betyr i utgangspunktet at modellen har blitt bedre og mere presis i sine prediksjon, men litt dårligere til finne flest mulig ekte \"postive\" utfall. I dette tilfellet vil jeg alikvel si at den tunede modellen er totaltsett bedre enn den var ved baseline.\n",
     "\n",
     "dt1 (baseline):\n",
     "Training results:\n",
@@ -1615,13 +1615,11 @@
     "ROCAUC: 0.96 +- 0.01\n",
     "************************\n",
     "Validation results:\n",
-    "Accuracy: 0.94 +- 0.02\n",
+    "Accuracy: 0.93 +- 0.02\n",
     "Precision: 0.93 +- 0.04\n",
     "Recall: 0.90 +- 0.05\n",
     "F1: 0.91 +- 0.03\n",
-    "ROCAUC: 0.93 +- 0.03\n",
-    "\n",
-    "\n"
+    "ROCAUC: 0.93 +- 0.02"
    ]
   },
   {
@@ -1660,10 +1658,9 @@
    "id": "61e19b64",
    "metadata": {},
    "source": [
-    "Akkurat som for DecisionTreeClassifier kjører vi først en kjøring med baseline tuning verdier for GaussianNB, slik at vi har et utgangspunkt å sammenligne med. Når vi ser på resultatene av baseline kjøringen for GaussianNB, så ser vi at det er veldig liten forskjell i resultatene for måleverdiene, men det noe større standard avik. Dette tyder på at modellen mindre problemer med overfiting uten tuning av modellen og derfor vil ha bedre generell overføringsverdi.\n",
+    "Akkurat som for DecisionTreeClassifier kjører vi først en kjøring med baseline tuning verdier for GaussianNB, slik at vi har et utgangspunkt å sammenligne med. Når vi ser på resultatene av baseline kjøringen for GaussianNB, så ser vi at det er veldig liten forskjell i resultatene mellom traning og validation delene av datasetet, men det noe større standard avik for validation delen. Dette tyder på at modellen ikke har store problemer med overfiting og derfor i utgangspunktet burde har god generell overføringsverdi.\n",
     "\n",
-    "skriv om tuning av modellen\n",
-    "\n",
+    "For tuning av GaussianNB er det kun et parameter som det er mulig å tune, dette er var_smoothing som er en parameter for å justere smoothing faktoren til modellen [5].\n",
     "\n",
     "ref:\n",
     "[5] \"https://scikit-learn.org/stable/modules/generated/sklearn.naive_bayes.GaussianNB.html\", lest 20.09.25"
@@ -1671,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "3658d3a4",
    "metadata": {},
    "outputs": [
@@ -1680,17 +1677,17 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Accuracy: 0.94 +- 0.01\n",
-      "Precision: 0.96 +- 0.01\n",
+      "Accuracy: 0.93 +- 0.01\n",
+      "Precision: 0.95 +- 0.01\n",
       "Recall: 0.87 +- 0.02\n",
       "F1: 0.91 +- 0.01\n",
       "ROCAUC: 0.92 +- 0.01\n",
       "************************\n",
       "Validation results:\n",
-      "Accuracy: 0.93 +- 0.02\n",
-      "Precision: 0.95 +- 0.03\n",
+      "Accuracy: 0.94 +- 0.02\n",
+      "Precision: 0.96 +- 0.03\n",
       "Recall: 0.86 +- 0.06\n",
-      "F1: 0.90 +- 0.04\n",
+      "F1: 0.91 +- 0.04\n",
       "ROCAUC: 0.92 +- 0.03\n"
      ]
     }
@@ -1733,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "id": "91fed950",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1741,7 @@
       "Training results:\n",
       "Accuracy: 0.94 +- 0.01\n",
       "Precision: 0.94 +- 0.02\n",
-      "Recall: 0.90 +- 0.02\n",
+      "Recall: 0.89 +- 0.02\n",
       "F1: 0.92 +- 0.01\n",
       "ROCAUC: 0.93 +- 0.01\n",
       "************************\n",
@@ -1752,7 +1749,7 @@
       "Accuracy: 0.94 +- 0.02\n",
       "Precision: 0.92 +- 0.04\n",
       "Recall: 0.91 +- 0.04\n",
-      "F1: 0.91 +- 0.03\n",
+      "F1: 0.92 +- 0.03\n",
       "ROCAUC: 0.93 +- 0.02\n"
      ]
     }
@@ -1797,11 +1794,45 @@
    "cell_type": "markdown",
    "id": "70bc055c",
    "metadata": {},
-   "source": []
+   "source": [
+    "Etter å ha gjennomført testing og validering med forskjellige verdier for var_smoothing har jeg valgt å bruke \"nb4\" da denne ga meg best resultater sammenlignet med baseline. Det også denne jeg kommer til sammeligne opp mot DecisionTreeClassifier. nb4 ble kjørt med følgende verdier. nb4 = GaussianNB(var_smoothing=1e-10).\n",
+    "\n",
+    "Når vi sammenligner resultatene mellom \"nb1\" og \"nb4\" så ser vi at begge modellene har relativt små forskjeller i resulatene mellom traning og validerings delen av datasetet, noe som tyde på at begge modellene i liten grad overfiter til trenings datasetet. Når vi ser videre på resultatene har \"nb4\" fått en forbedring i recall, men også en reduksjon i precision kontra \"nb1\". Dette kan dermed tyde på at \"nb4\" har blitt bedre til å oppdage flest mulige \"positive\" tilfeller, men på bekostning av presisjonen til alle \"positive\" prediksjoner dvs. at den predikere noen flere falske \"positive\" tilfeller. Som nevnt tidligere så er dette godt innenfor forventet variasjon når vi ser på verdiene for standard avikene så det er viktig å ikke tolke disse endringene for sterkt.\n",
+    "\n",
+    "nb1 (baseline):\n",
+    "Training results:\n",
+    "Accuracy: 0.94 +- 0.01\n",
+    "Precision: 0.95 +- 0.01\n",
+    "Recall: 0.89 +- 0.02\n",
+    "F1: 0.92 +- 0.01\n",
+    "ROCAUC: 0.93 +- 0.01\n",
+    "************************\n",
+    "Validation results:\n",
+    "Accuracy: 0.94 +- 0.02\n",
+    "Precision: 0.94 +- 0.04\n",
+    "Recall: 0.89 +- 0.05\n",
+    "F1: 0.91 +- 0.03\n",
+    "ROCAUC: 0.93 +- 0.03\n",
+    "\n",
+    "nb4:\n",
+    "Training results:\n",
+    "Accuracy: 0.94 +- 0.01\n",
+    "Precision: 0.94 +- 0.02\n",
+    "Recall: 0.89 +- 0.02\n",
+    "F1: 0.92 +- 0.01\n",
+    "ROCAUC: 0.93 +- 0.01\n",
+    "************************\n",
+    "Validation results:\n",
+    "Accuracy: 0.94 +- 0.02\n",
+    "Precision: 0.92 +- 0.04\n",
+    "Recall: 0.91 +- 0.04\n",
+    "F1: 0.92 +- 0.03\n",
+    "ROCAUC: 0.93 +- 0.02"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "id": "1806682b",
    "metadata": {},
    "outputs": [
@@ -1818,17 +1849,17 @@
       "ROCAUC: 0.96 +- 0.01\n",
       "************************\n",
       "Validation results:\n",
-      "Accuracy: 0.93 +- 0.03\n",
+      "Accuracy: 0.93 +- 0.02\n",
       "Precision: 0.92 +- 0.05\n",
       "Recall: 0.89 +- 0.06\n",
-      "F1: 0.91 +- 0.04\n",
+      "F1: 0.90 +- 0.03\n",
       "ROCAUC: 0.92 +- 0.03\n",
       "************************\n",
       "Test results:\n",
       "Accuracy: 0.93 +- 0.02\n",
-      "Precision: 0.93 +- 0.04\n",
-      "Recall: 0.89 +- 0.05\n",
-      "F1: 0.91 +- 0.03\n",
+      "Precision: 0.93 +- 0.05\n",
+      "Recall: 0.88 +- 0.06\n",
+      "F1: 0.90 +- 0.03\n",
       "ROCAUC: 0.92 +- 0.03\n",
       "\n",
       "***************\n",
@@ -1842,17 +1873,17 @@
       "ROCAUC: 0.93 +- 0.01\n",
       "************************\n",
       "Validation results:\n",
-      "Accuracy: 0.94 +- 0.02\n",
-      "Precision: 0.94 +- 0.04\n",
-      "Recall: 0.90 +- 0.05\n",
-      "F1: 0.92 +- 0.03\n",
+      "Accuracy: 0.93 +- 0.02\n",
+      "Precision: 0.92 +- 0.04\n",
+      "Recall: 0.90 +- 0.04\n",
+      "F1: 0.91 +- 0.03\n",
       "ROCAUC: 0.93 +- 0.02\n",
       "************************\n",
       "Test results:\n",
-      "Accuracy: 0.94 +- 0.02\n",
-      "Precision: 0.92 +- 0.03\n",
+      "Accuracy: 0.93 +- 0.02\n",
+      "Precision: 0.92 +- 0.04\n",
       "Recall: 0.90 +- 0.04\n",
-      "F1: 0.91 +- 0.02\n",
+      "F1: 0.91 +- 0.03\n",
       "ROCAUC: 0.93 +- 0.02\n"
      ]
     }
@@ -1866,6 +1897,26 @@
     "validate(nb4, 50)\n",
     "test(nb4, 50)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abcac997",
+   "metadata": {},
+   "source": [
+    "Når vi sammenligner modellene for DecisionTreeClassifier og GaussianNB ser vi at det er betydelig større variasjon mellom resultatene for traning, validation og test delene av datasetet for DecisionTreeClassifier, spesielt mellom traing og de andre delene av datasetet.Når vi ser på forskjellige mellom validation og test delene av datasette så er disse mye mindre enn opp mot resultatene for traning delen. Dette indikere at DecisionTreeClassifier modellen problemer med overfiting i forhold til traning delen av modellen, men vi har imidlertid forbedret dette noe gjennom tuningen av modellen.\n",
+    "Når vi ser på resultatene for GaussianNB så er vi at det er mye mindre forskjeller i resulatatene mellom traning, validation og test dette inkidere at modellen i liten grad har problemer med overfiting i forhold til treningen av modell og derfor har bedre generell overføringverdi til andre data.\n",
+    "\n",
+    "Når vi også sammenligner de endelige test resultatene mellom DecisionTreeClassifier og GaussianNB, så ser vi at GaussianNB har like eller bedre resultater for alle målene bortsett fra for precision hvor DecisionTreeClassifier ligger et knep forann, men hvis vi ser på standard avikene så ser vi at GaussianNB har mindre standard avik for både precision og recall enn DecisionTreeClassifier og derfor vil ha mindre variasjon i disse verdiene ved flere kjøring av modellen. Jeg har valgt å bruke looping ved kjøring av modellen slik at jeg har fått resultater med mindre variasjonn og standard avik for å kunne ha et mål på den forvented variasjonen. Jeg ladet på å bruke 50 runder for hver modell, men det er forsatt betydelig variasjon pga. den randomiserte oppdeling av datasetet ved oppdeling til traning, validation og test. Ved flere kjøring vil derfor resulatene kunne variere betydelig.\n",
+    "\n",
+    "Totaltsett lader jeg på at GaussianNB vil være en bedre modelle for disse dataene, både på grunn av litt bedre resultater totaltset, men også pga mindre risiko for overfiting av modellen ved treningen.\n",
+    "Når vi ser på datatypene som featuresene i datasetet innehold er dette ikke så overraskende da alle disse virker å være normalfordelte tallverdier som vil passe veldig godt til bruk i GaussianNB modellen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffad9a2e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
