--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "72f809ab",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "f3a61c08",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "4     24.97937     121.54245                        43.1  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +157,196 @@
    "source": [
     "raw_df = pd.read_csv(\"../Oblig1/realestate.csv\")\n",
     "raw_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c2b4aef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>No</th>\n",
+       "      <th>X1 transaction date</th>\n",
+       "      <th>X2 house age</th>\n",
+       "      <th>X3 distance to the nearest MRT station</th>\n",
+       "      <th>X4 number of convenience stores</th>\n",
+       "      <th>X5 latitude</th>\n",
+       "      <th>X6 longitude</th>\n",
+       "      <th>Y house price of unit area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>206.500000</td>\n",
+       "      <td>207.500000</td>\n",
+       "      <td>2013.148953</td>\n",
+       "      <td>17.712560</td>\n",
+       "      <td>1083.885689</td>\n",
+       "      <td>4.094203</td>\n",
+       "      <td>24.969030</td>\n",
+       "      <td>121.533361</td>\n",
+       "      <td>37.980193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>119.655756</td>\n",
+       "      <td>119.655756</td>\n",
+       "      <td>0.281995</td>\n",
+       "      <td>11.392485</td>\n",
+       "      <td>1262.109595</td>\n",
+       "      <td>2.945562</td>\n",
+       "      <td>0.012410</td>\n",
+       "      <td>0.015347</td>\n",
+       "      <td>13.606488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2012.666667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>23.382840</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>24.932070</td>\n",
+       "      <td>121.473530</td>\n",
+       "      <td>7.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>103.250000</td>\n",
+       "      <td>104.250000</td>\n",
+       "      <td>2012.916667</td>\n",
+       "      <td>9.025000</td>\n",
+       "      <td>289.324800</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>24.963000</td>\n",
+       "      <td>121.528085</td>\n",
+       "      <td>27.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>206.500000</td>\n",
+       "      <td>207.500000</td>\n",
+       "      <td>2013.166667</td>\n",
+       "      <td>16.100000</td>\n",
+       "      <td>492.231300</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>24.971100</td>\n",
+       "      <td>121.538630</td>\n",
+       "      <td>38.450000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>309.750000</td>\n",
+       "      <td>310.750000</td>\n",
+       "      <td>2013.416667</td>\n",
+       "      <td>28.150000</td>\n",
+       "      <td>1454.279000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>24.977455</td>\n",
+       "      <td>121.543305</td>\n",
+       "      <td>46.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>413.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>2013.583333</td>\n",
+       "      <td>43.800000</td>\n",
+       "      <td>6488.021000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>25.014590</td>\n",
+       "      <td>121.566270</td>\n",
+       "      <td>117.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0          No  X1 transaction date  X2 house age  \\\n",
+       "count  414.000000  414.000000           414.000000    414.000000   \n",
+       "mean   206.500000  207.500000          2013.148953     17.712560   \n",
+       "std    119.655756  119.655756             0.281995     11.392485   \n",
+       "min      0.000000    1.000000          2012.666667      0.000000   \n",
+       "25%    103.250000  104.250000          2012.916667      9.025000   \n",
+       "50%    206.500000  207.500000          2013.166667     16.100000   \n",
+       "75%    309.750000  310.750000          2013.416667     28.150000   \n",
+       "max    413.000000  414.000000          2013.583333     43.800000   \n",
+       "\n",
+       "       X3 distance to the nearest MRT station  \\\n",
+       "count                              414.000000   \n",
+       "mean                              1083.885689   \n",
+       "std                               1262.109595   \n",
+       "min                                 23.382840   \n",
+       "25%                                289.324800   \n",
+       "50%                                492.231300   \n",
+       "75%                               1454.279000   \n",
+       "max                               6488.021000   \n",
+       "\n",
+       "       X4 number of convenience stores  X5 latitude  X6 longitude  \\\n",
+       "count                       414.000000   414.000000    414.000000   \n",
+       "mean                          4.094203    24.969030    121.533361   \n",
+       "std                           2.945562     0.012410      0.015347   \n",
+       "min                           0.000000    24.932070    121.473530   \n",
+       "25%                           1.000000    24.963000    121.528085   \n",
+       "50%                           4.000000    24.971100    121.538630   \n",
+       "75%                           6.000000    24.977455    121.543305   \n",
+       "max                          10.000000    25.014590    121.566270   \n",
+       "\n",
+       "       Y house price of unit area  \n",
+       "count                  414.000000  \n",
+       "mean                    37.980193  \n",
+       "std                     13.606488  \n",
+       "min                      7.600000  \n",
+       "25%                     27.700000  \n",
+       "50%                     38.450000  \n",
+       "75%                     46.600000  \n",
+       "max                    117.500000  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.describe()"
    ]
   },
   {
@@ -190,6 +380,14 @@
    ],
    "source": [
     "raw_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74da9e3f",
+   "metadata": {},
+   "source": [
+    "Ut i fra beksrivelsen til datasetet så er hensikten med dette datasetet å predikere pris per areal i forhold til feature verdiene i datasetet. Datasetet består av en target verdi (kolonne[8]) som beskrive pris per aral for huset det gjelder. Videre har vi 6 feature verdier (kolonne[2-7]) som alle virker å være normal fordelte tallverdier. Videre har vi 2 kolonne som inneholder id verdier for datasetet som ikke har noen nytteverdi for analyse vi skal gjøre (kolonne[0-1].)"
    ]
   },
   {
@@ -312,12 +510,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d217a209",
+   "cell_type": "markdown",
+   "id": "227127ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Før vi bruker datasetet videre legger jeg verdiene i target kolonnen over i en ny kolonne 'target' slik at jeg letter kan bruke generelle metoder i funksjonen jeg definere.\n",
+    "Videre dropper jeg også alle kolonnene uten nytteverdi for modellen, samt den gamle kolonnen med target verdiene."
+   ]
   },
   {
    "cell_type": "code",
