--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -887,6 +887,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a625f2e",
+   "metadata": {},
+   "source": [
+    "I forhold til funksjonene for traning, validering og testing av datasetet er disse bygget opp på samme måte som for funksjonene i breast_cancer.ipynb, men tilpasset for modellene som brukes for regresjons analysene for dette datasetet.\n",
+    "\n",
+    "I forhold til vurdering av resulatene så komme dette til å gjøres med følgende målinger r2_score, mean_squared_error, mean_absolute_error.\n",
+    "\n",
+    "mean_absolute_error: er et mål på den totale feilmengden i modellen\n",
+    "\n",
+    "mean_squared_error: større sensitivitet for å oppdage store enkelt utliggere i modellen\n",
+    "\n",
+    "r2_score: gir oss et mål på hvor mye av variasjon av target variablen som kan forklarer av featurene vi har datasetet ut i fra modellen vi bruker."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "06ea3f93",
