--- a/Oblig1/breast_cancer.ipynb
+++ b/Oblig1/breast_cancer.ipynb
@@ -992,7 +992,7 @@
    "source": [
     "For funksjonene jeg har laget for trening, tuning og testing av modellen så har jeg valgt å legg inn løkker, slik at validering og testing kan kjøres flere gang med ny oppdeling av datasetet hver gang disse løkkene starter på en ny loop. Dette er gjort for å oppnå mindre variasjon i resultatene ved både validering av tuningen, samt testing av slutt resultatet slik at disse har større grad av pålitelighet. Jeg har også lagt inn mulighet for å velg antall ganger løkkene skal kjøres.\n",
     "\n",
-    "Videre er det gjennomsnittet av resultatene fra alle kjøringene i løkkene som skrive ut sammen med standardavik, slik at dette gir et bedre bilde av variasjonen som oppstår pga. den randomiserte oppdeling av datasettet ved bruk av løkkene i testingen. "
+    "Videre er det gjennomsnittet av resultatene fra alle kjøringene i løkkene som skrives ut sammen med standardavik, slik at dette gir et bedre bilde av variasjonen som oppstår pga. den randomiserte oppdeling av datasettet ved bruk av løkkene i testingen. "
    ]
   },
   {
