--- a/Oblig1/realestate.ipynb
+++ b/Oblig1/realestate.ipynb
@@ -893,13 +893,16 @@
    "source": [
     "I forhold til funksjonene for traning, validering og testing av datasetet er disse bygget opp på samme måte som for funksjonene i breast_cancer.ipynb, men tilpasset for modellene som brukes for regresjons analysene for dette datasetet.\n",
     "\n",
-    "I forhold til vurdering av resulatene så komme dette til å gjøres med følgende målinger r2_score, mean_squared_error, mean_absolute_error.\n",
+    "I forhold til vurdering av resulatene så kommer dette til å gjøres med følgende målinger r2_score, mean_squared_error, mean_absolute_error.\n",
     "\n",
-    "mean_absolute_error: er et mål på den totale feilmengden i modellen\n",
+    "mean_absolute_error er et mål på den totale feilmengden til modellen hvor du summere erroren til de individuelle punktene/rekkene i datasetet til en total for modellen, desto høyere dette resultatet er jo større total feilmengde har du [2].\n",
     "\n",
-    "mean_squared_error: større sensitivitet for å oppdage store enkelt utliggere i modellen\n",
+    "mean_squared_error er i utgangspunktet også et mål på den totale feilmengden til modellen, men utover summeringen av feilmengdene i datasetet som for mean_absolutte_error så blir også feilmengdene opphøyet i 2. Dette gjør at dette mean-squared_error får en større sensitivit for store enkelt uteliggere kontra mean_absolute_error [2].\n",
     "\n",
-    "r2_score: gir oss et mål på hvor mye av variasjon av target variablen som kan forklarer av featurene vi har datasetet ut i fra modellen vi bruker."
+    "r2_score gir oss et mål på hvor mye av variasjon i target variablen som kan forklarers av endringer i verdiene til features variablene i datasetet [2]. Hvis du har en r2_score på 1.0 har du perfekt korelasjon mellom features variablene og endringene i target variabelen, mens hvis du har en score på 0 så er den ingen korelasjon.\n",
+    "\n",
+    "ref:\n",
+    "[2] (metrics): \"https://scikit-learn.org/stable/modules/model_evaluation.html\", lest 20.09.25"
    ]
   },
   {
@@ -927,6 +930,18 @@
    "source": [
     "dt1 = DecisionTreeRegressor(max_depth=None, min_samples_leaf=1, min_samples_split=2)\n",
     "validate(dt1, 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f430e1c",
+   "metadata": {},
+   "source": [
+    "Før vi kan gjennomføre hyperparameter tuning av DecisionTreeRegressor modellen så må vi gjennomføre en kjøring default instillinger slik at vi får en baseline vi kan sammenligne med.\n",
+    "\n",
+    "Som vi ser av disse resultatene får vi i training delen perfekt r2_score og nesten ingen feilmengde for mean_squared_error og mean_absolute_error. Mens vi for validations delen for en r2_score på 0.49 og en høyere feilmengde på både mean_squared_error og mean_absolute_error. Dette tyder dermed på at vi får en betydelig overfiting av modellen i forhold til trenings delen av datasetet.\n",
+    "\n",
+    "I forhold til tuning av modellen så bruker DecisionTreeRegressor de samme parameterene til hyperparameter tuning som DecisionTreeClassifier, så jeg kommer ikke til å beskrive dette noe mer enn det som allerede er gjort i breast_cancer.ipynb"
    ]
   },
   {
@@ -1362,6 +1377,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7cc5dbbd",
+   "metadata": {},
+   "source": [
+    "Etter å ha gjennomført testing og validering med forskjellige verdier for tuning parameterene kom jeg fram til at versjonen \"dt14\" ga meg best resultater sammenlignet med baseline og det er dermed denne jeg kommer til å sammeligne opp mot LinearRegression dt14 hadde følge verdier for tuning parameterene DecisionTreeRegressor(max_depth=3, min_samples_leaf=10, min_samples_split=2).\n",
+    "\n",
+    "Igjen som for DecisionTreeClassifier ser vi at resultatene for traning delen av datasetet blir dårligere ved tuning, men at validations delen av resultatet blir bedre. Dette tyder på overfiting som modellen i utgangspunktet hadde ved baseline har blitt mindre og modellen derfor får en bedre generell overførings verdi.\n",
+    "\n",
+    "Videre ser vi at det er betydelig økning i r2_score for validerings delen mellom \"dt1\" og \"dt14\", samt av resultaten for feilmengde også har blitt mye lavere. Helheten av dette gjør at vi kan si at tuningen vi har gjort av modellen med parametrene i \"dt14\" gir modellen en betydelig bedre prediksjons evne kontra baseline.\n",
+    "\n",
+    "dt1 (baseline):\n",
+    "Training results:\n",
+    "Mean absolute error: 0.11 +- 0.05\n",
+    "Mean squared error: 0.36 +- 0.19\n",
+    "R2 score: 1.00 +- 0.00\n",
+    "************************\n",
+    "Validation results:\n",
+    "Mean absolute error: 6.31 +- 0.66\n",
+    "Mean squared error: 92.27 +- 30.48\n",
+    "R2 score: 0.49 +- 0.15\n",
+    "\n",
+    "dt14:\n",
+    "Training results:\n",
+    "Mean absolute error: 5.02 +- 0.31\n",
+    "Mean squared error: 53.80 +- 11.20\n",
+    "R2 score: 0.71 +- 0.04\n",
+    "************************\n",
+    "Validation results:\n",
+    "Mean absolute error: 5.64 +- 0.49\n",
+    "Mean squared error: 65.39 +- 20.27\n",
+    "R2 score: 0.63 +- 0.07"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "id": "1f14b4a3",
@@ -1389,8 +1438,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d25e1a1",
+   "metadata": {},
+   "source": [
+    "Igjen som for alle de andre modellene kjører vi først en baseline test av modellen slik at vi har noe å sammenligne med ut ifra. Som vi ser av resultatene for denne baseline kjøringen så er det ikke store forskjeller mellom training og validation delene av resultatene og det ser dermed ut som modellen ikke har problemer med betydelig overfiting mot traning delen av datasetet. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 70,
    "id": "73925078",
    "metadata": {},
    "outputs": [
@@ -1399,14 +1456,14 @@
      "output_type": "stream",
      "text": [
       "Training results:\n",
-      "Mean absolute error: 6.05 +- 0.31\n",
-      "Mean squared error: 75.17 +- 14.79\n",
-      "R2 score: 0.59 +- 0.05\n",
+      "Mean absolute error: 6.14 +- 0.41\n",
+      "Mean squared error: 79.36 +- 16.31\n",
+      "R2 score: 0.58 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.43 +- 0.62\n",
-      "Mean squared error: 83.44 +- 30.56\n",
-      "R2 score: 0.56 +- 0.09\n"
+      "Mean absolute error: 6.29 +- 0.61\n",
+      "Mean squared error: 79.47 +- 28.07\n",
+      "R2 score: 0.57 +- 0.08\n"
      ]
     }
    ],
@@ -1552,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "id": "0ae65203",
    "metadata": {},
    "outputs": [
@@ -1562,48 +1619,48 @@
      "text": [
       "DecisionTreeRegressor:\n",
       "Training results:\n",
-      "Mean absolute error: 4.96 +- 0.31\n",
-      "Mean squared error: 52.38 +- 10.91\n",
-      "R2 score: 0.72 +- 0.04\n",
+      "Mean absolute error: 4.99 +- 0.30\n",
+      "Mean squared error: 53.17 +- 10.02\n",
+      "R2 score: 0.71 +- 0.03\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 5.71 +- 0.62\n",
-      "Mean squared error: 68.54 +- 23.24\n",
-      "R2 score: 0.62 +- 0.08\n",
+      "Mean absolute error: 5.84 +- 0.56\n",
+      "Mean squared error: 75.54 +- 25.76\n",
+      "R2 score: 0.61 +- 0.09\n",
       "************************\n",
       "Test results:\n",
-      "Mean absolute error: 5.90 +- 0.56\n",
-      "Mean squared error: 74.01 +- 23.51\n",
-      "R2 score: 0.60 +- 0.09\n",
+      "Mean absolute error: 5.76 +- 0.60\n",
+      "Mean squared error: 67.73 +- 23.16\n",
+      "R2 score: 0.62 +- 0.08\n",
       "\n",
       "***************\n",
       "\n",
       "LinearRegression:\n",
       "Training results:\n",
-      "Mean absolute error: 6.12 +- 0.39\n",
-      "Mean squared error: 74.77 +- 15.28\n",
-      "R2 score: 0.59 +- 0.05\n",
+      "Mean absolute error: 6.20 +- 0.35\n",
+      "Mean squared error: 77.61 +- 14.81\n",
+      "R2 score: 0.58 +- 0.05\n",
       "************************\n",
       "Validation results:\n",
-      "Mean absolute error: 6.37 +- 0.48\n",
-      "Mean squared error: 87.38 +- 26.44\n",
-      "R2 score: 0.55 +- 0.08\n",
+      "Mean absolute error: 6.21 +- 0.51\n",
+      "Mean squared error: 78.57 +- 23.80\n",
+      "R2 score: 0.58 +- 0.07\n",
       "************************\n",
       "Test results:\n",
-      "Mean absolute error: 6.28 +- 0.53\n",
-      "Mean squared error: 83.46 +- 28.10\n",
+      "Mean absolute error: 6.36 +- 0.57\n",
+      "Mean squared error: 82.48 +- 27.02\n",
       "R2 score: 0.56 +- 0.08\n"
      ]
     }
    ],
    "source": [
     "print(\"DecisionTreeRegressor:\")\n",
-    "validate(dt12, 50)\n",
-    "test(dt12, 50)\n",
+    "validate(dt14, 50)\n",
+    "test(dt14, 50)\n",
     "print(\"\\n***************\\n\")\n",
     "print(\"LinearRegression:\")\n",
-    "validate(lr3, 50)\n",
-    "test(lr3, 50)"
+    "validate(lr1, 50)\n",
+    "test(lr1, 50)"
    ]
   }
  ],
